server/k8s/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element-tracker-deployment
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: element-tracker
  template:
    metadata:
      labels:
        app: element-tracker
    spec:
      containers:
        - name: element-tracker
          image: cs125/element-tracker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: element-tracker-service
  namespace: demo
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8888
  selector:
    app: element-tracker
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-redirect-from: /
    nginx.ingress.kubernetes.io/proxy-redirect-to: /demo/element-tracker/
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: element-tracker-ingress
spec:
  rules:
    - host: cs125-cloud.cs.illinois.edu
      http:
        paths:
          - path: /demo/element-tracker(/|$)(.*)
            backend:
              serviceName: element-tracker-service
              servicePort: 80
